--- a/Trivia/app/src/main/res/navigation/navigation.xml
+++ b/Trivia/app/src/main/res/navigation/navigation.xml
@@ -38,8 +38,7 @@
         <action
             android:id="@+id/action_gameOverFragment_to_gameFragment"
             app:destination="@id/gameFragment"
-            app:popUpTo="@+id/titleFragment"
-            app:popUpToInclusive="false" />
+            app:popUpTo="@+id/titleFragment" />
     </fragment>
     <fragment
         android:id="@+id/gameWonFragment"
@@ -49,7 +48,11 @@
         <action
             android:id="@+id/action_gameWonFragment_to_gameFragment"
             app:destination="@id/gameFragment"
-            app:popUpTo="@+id/titleFragment"
-            app:popUpToInclusive="false" />
+            app:popUpTo="@+id/titleFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="at.htl.trivia.AboutFragment"
+        android:label="title_about_trivia"
+        tools:layout="@layout/fragment_about" />
 </navigation>
