--- a/MarsRealEstate/app/src/main/res/layout/fragment_overview.xml
+++ b/MarsRealEstate/app/src/main/res/layout/fragment_overview.xml
@@ -24,13 +24,13 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.android.marsrealestate.overview.OverviewViewModel" />
+            type="at.htl.marsrealestate.overview.OverviewViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.android.marsrealestate.MainActivity">
+        tools:context="at.htl.marsrealestate.MainActivity">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
