--- a/DevBytes/app/src/main/res/layout/fragment_dev_byte.xml
+++ b/DevBytes/app/src/main/res/layout/fragment_dev_byte.xml
@@ -25,7 +25,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.android.devbyteviewer.viewmodels.DevByteViewModel" />
+            type="at.htl.devbyteviewer.viewmodels.DevByteViewModel" />
     </data>
 
     <FrameLayout
