--- a/GdgFinder/app/src/main/res/layout/fragment_gdg_list.xml
+++ b/GdgFinder/app/src/main/res/layout/fragment_gdg_list.xml
@@ -7,13 +7,13 @@
 
         <variable
                 name="viewModel"
-                type="com.example.android.gdgfinder.search.GdgListViewModel" />
+                type="at.htl.gdgfinder.search.GdgListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context="com.example.android.gdg.MainActivity">
+            tools:context="at.htl.gdg.MainActivity">
 
         <HorizontalScrollView
                 android:id="@+id/chips"
