--- a/GdgFinder/app/src/main/res/navigation/nav_graph.xml
+++ b/GdgFinder/app/src/main/res/navigation/nav_graph.xml
@@ -6,26 +6,26 @@
 
     <fragment
             android:id="@+id/gdg_search"
-            android:name="com.example.android.gdgfinder.search.GdgListFragment"
+            android:name="at.htl.gdgfinder.search.GdgListFragment"
             android:label="GDG Search"
     >
     </fragment>
-    <fragment android:id="@+id/home" android:name="com.example.android.gdgfinder.home.HomeFragment"
+    <fragment android:id="@+id/home" android:name="at.htl.gdgfinder.home.HomeFragment"
               android:label="Home" tools:layout="@layout/home_fragment">
         <action android:id="@+id/action_homeFragment_to_gdgListFragment" app:destination="@id/gdg_search"/>
         <action android:id="@+id/action_homeFragment_to_addGdgFragment" app:destination="@id/gdg_apply"/>
     </fragment>
-    <fragment android:id="@+id/gdg_apply" android:name="com.example.android.gdgfinder.add.AddGdgFragment"
+    <fragment android:id="@+id/gdg_apply" android:name="at.htl.gdgfinder.add.AddGdgFragment"
               android:label="Apply" tools:layout="@layout/add_gdg_fragment"/>
 
     <!--<fragment-->
             <!--android:id="@+id/gdgDetailFragment"-->
-            <!--android:name="com.example.android.gdg.gdgdetail.GdgDetailFragment"-->
+            <!--android:name="at.htl.gdg.gdgdetail.GdgDetailFragment"-->
             <!--android:label="fragment_overview"-->
             <!--tools:layout="@layout/fragment_gdg_detail" >-->
         <!--<argument-->
         <!--android:name="selectedChapter"-->
-        <!--app:argType="com.example.android.gdg.network.GdgChapter"/>-->
+        <!--app:argType="at.htl.gdg.network.GdgChapter"/>-->
         <!--<action android:id="@+id/action_gdgDetailFragment_to_gdgListFragment" app:destination="@id/gdgListFragment"/>-->
     <!--</fragment>-->
 </navigation>
