--- a/GdgFinder/app/src/main/res/layout/add_gdg_fragment.xml
+++ b/GdgFinder/app/src/main/res/layout/add_gdg_fragment.xml
@@ -23,6 +23,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/add_gdg"
                     android:textColor="#AAAAAA"
+                    android:contentDescription="@string/add_gdg"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +35,7 @@
                     android:id="@+id/imageView"
                     android:layout_width="411dp"
                     android:layout_height="230dp"
+                    android:contentDescription="@string/stage_image_description"
                     tools:src="@tools:sample/avatars"
                     app:srcCompat="@drawable/behind"
                     android:layout_marginTop="5dp"
@@ -49,6 +51,7 @@
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:layout_marginTop="8dp"
+                    android:hint="@string/your_name_label"
                     app:layout_constraintTop_toBottomOf="@+id/imageView"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +66,7 @@
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:layout_marginTop="4dp"
+                    android:hint="@string/email_label"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextName"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="32dp"
@@ -76,6 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:layout_marginTop="4dp"
+                    android:hint="@string/city_label"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextEmail"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="32dp"
@@ -91,6 +96,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/EditTextCity"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="32dp"
+                    android:hint="@string/country_label"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="32dp"
                     android:layout_marginBottom="4dp"
@@ -102,6 +108,7 @@
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:layout_marginTop="4dp"
+                    android:hint="@string/region_label"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextCountry"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="32dp"
@@ -130,6 +137,7 @@
                     android:text="@string/motivation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:contentDescription="@string/motivation"
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="32dp"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextRegion"
@@ -143,6 +151,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textMultiLine"
                     android:ems="10"
+                    android:hint="@string/enter_motivation"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextRegion"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -159,6 +168,7 @@
                     android:text="Ok"
                     android:layout_width="40dp"
                     android:layout_height="24dp"
+                    android:contentDescription="@string/submit_button_description"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextWhy"
